--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,49 @@
 services:
   api:
-    build: .
+    build: 
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "8000:8000"
     environment:
       - ENV=development
-      - GOOGLE_CLOUD_PROJECT=${GOOGLE_CLOUD_PROJECT}
+      - GOOGLE_CLOUD_PROJECT=${GOOGLE_CLOUD_PROJECT:-}
+      - MLB_API_BASE_URL=https://statsapi.mlb.com/api/v1
+      - REDIS_URL=redis://redis:6379
+      - LOG_LEVEL=INFO
     env_file:
       - .env
     volumes:
       - ./src:/app/src
       - ./credentials:/app/credentials
+      - ./logs:/app/logs
     depends_on:
-      - redis
+      redis:
+        condition: service_healthy
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
+      start_period: 40s
+    restart: unless-stopped
+    networks:
+      - mlb-network
 
   redis:
     image: redis:7-alpine
     ports:
       - "6379:6379"
+    volumes:
+      - redis_data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+    restart: unless-stopped
+    networks:
+      - mlb-network
 
   streamlit:
     build:
@@ -32,5 +53,19 @@ services:
       - "8501:8501"
     environment:
       - API_URL=http://api:8000
+      - ENV=development
+    volumes:
+      - ./streamlit_app:/app/streamlit_app
     depends_on:
-      - api
+      api:
+        condition: service_healthy
+    restart: unless-stopped
+    networks:
+      - mlb-network
+
+volumes:
+  redis_data:
+
+networks:
+  mlb-network:
+    driver: bridge
