--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,14 @@ pydantic==2.5.0
 pandas==2.1.3
 google-cloud-bigquery==3.13.0
 google-cloud-storage==2.10.0
+google-cloud-functions==1.13.4
+google-api-core==2.15.0
 httpx==0.25.2
 redis==5.0.1
 python-dotenv==1.0.0
 structlog==23.2.0
+apache-airflow==2.7.3
+apache-airflow-providers-google==10.4.0
+apache-airflow-providers-http==4.7.0
+asyncio==3.4.3
+aiofiles==23.2.1
